feat:  updated main page

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@ layout: splash
 permalink: /
 date:
 header:
-  overlay_image: /assets/images/school.jpg
-  overlay_filter: .5
-  cta_label: "Explore our Courses <i class='fas fa-chevron-circle-right'></i>"
+  overlay_image: /assets/images/HeroImage.png
+  overlay_filter: .3
+  cta_label: "စကြရအောင်။  <i class='fas fa-chevron-circle-right'></i>"
   cta_url: "https://alexsnowschool.github.io/resources/"
   caption:
-excerpt: 'A Youths led school for empowering the next generation towards Myanmar economic and technological advancement'
+excerpt: 'တစ်ရက်နည်းနည်းစီ တဖြည်းဖြည်း အတူတူလေ့လာကြစို့။'
 feature_row:
   - image_path: /assets/images/12881v.jpg
     alt: "about"
     title: "About the school"
-    excerpt: "The Local Preservation School is a community-based project with opportunities for people from all backgrounds to take part."
+    excerpt: "A Youths led school for empowering the next generation towards Myanmar economic and technological advancement."
     url: "/about/"
     btn_label: "Learn More"
   - image_path: /assets/images/18659u.jpg
@@ -36,10 +36,10 @@ intro:
 
 {% include feature_row %}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
+<!-- <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3> -->
 
-{% for post in paginator.posts %}
+<!-- {% for post in paginator.posts %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} --> 
 
 {% include paginator.html %}
