--- a/_pages/resources.html
+++ b/_pages/resources.html
@@ -5,9 +5,9 @@ permalink: /resources/
 excerpt: 'Find, reuse, and remix educational resources created and collected by the Local Preservation School.'
 header:
   teaser: /assets/images/18659u.jpg
-  overlay_image: /assets/images/18659u.jpg
-  overlay_filter: .5
-  caption: "Columbus Signature Academy, Fodrea Campus, Columbus, Indiana, 2011 November by Carol M. Highsmith. Courtesy [Library of Congress](http://www.loc.gov/pictures/item/2013650703/) ([PD](https://creativecommons.org/publicdomain/mark/1.0/))."
+  overlay_image: /assets/images/HeroImage.png
+  overlay_filter: .3
+  caption: 
 sidebar:
   - title: "Browse by tag"
 ---
