--- a/_pages/course-year-archive.html
+++ b/_pages/course-year-archive.html
@@ -1,11 +1,11 @@
 ---
 layout: archive
-permalink: /resources/year/
+permalink: /courses/year/
 title: "Resources by Year"
 ---
 
 {% capture written_year %}'None'{% endcapture %}
-{% for post in site.resources %}
+{% for post in site.courses %}
   {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
   {% if year != written_year %}
     <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
