added 3 dummy course link

--- a/_pages/course-tag-archive.html
+++ b/_pages/course-tag-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 permalink: /courses/tag/
-title: "Resources by Tag"
+title: "Courses by Tag"
 ---
 
 {% include group-by-array collection=site.courses field="tags" %}
