--- a/_pages/course-year-archive.html
+++ b/_pages/course-year-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 permalink: /courses/year/
-title: "Resources by Year"
+title: "Courses by Year"
 ---
 
 {% capture written_year %}'None'{% endcapture %}
