--- a/_pages/courses.html
+++ b/_pages/courses.html
@@ -2,7 +2,7 @@
 layout: course-directory
 title: Courses
 permalink: /courses/
-excerpt: 'Find, reuse, and remix educational courses created and collected by the Local Preservation School.'
+excerpt: 'Find, reuse, and remix educational courses created and collected by the Alex Snow School.'
 header:
   teaser: /assets/images/18659u.jpg
   overlay_image: /assets/images/HeroImage.png
