--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@ header:
   caption:
 excerpt: 'တစ်ရက်နည်းနည်းစီ တဖြည်းဖြည်း အတူတူလေ့လာကြစို့။'
 feature_row:
-  - image_path: /assets/images/12881v.jpg
-    alt: "about"
-    title: "About the school"
-    excerpt: "A Youths led school for empowering the next generation towards Myanmar economic and technological advancement."
-    url: "/about/"
-    btn_label: "Learn More"
-  - image_path: /assets/images/18659u.jpg
-    alt: "teach"
-    title: "Tools for teaching"
-    excerpt: "Our resources can be reused and adapted for workshops, trainings, and courses. Please explore our collection and or share your own educational resources."
-    url: "/teach/"
-    btn_label: "Learn More"
-  - image_path: /assets/images/11929u.jpg
-    alt: "100% free"
-    title: "Free and open education"
-    excerpt: "Open educational resources are teaching and learning materials that are free and online for everyone: teachers, students, and independent learners."
-    url: "/open-education/"
-    btn_label: "Learn More"
+  - image_path: /assets/images/intro-to-ml-poster.png
+    alt: "intro-to-ml"
+    title: "Introduction to Machine Learning"
+    excerpt: "AI ကို စတင်ခြေလှမ်းဖို့အတွက် Deep Learning မလေ့လာခင် Machine Learning ရဲ့ basics တွေ ဖြစ်တဲ့ ML Algorithms ၊ ကိုယ် train ချင်တဲ့ Datasets အကြောင်း၊ Accuracy နဲ့ Loss ဆိုတာတွေ အစရှိတဲ့ Theory and Basics တွေအကြောင်းသင်ကြားပေးမှာဖြစ်ပါတယ်။"
+    url: "/courses/intro-to-ml/"
+    btn_label: "ပိုမိုလေ့လာမယ်။"
+  - image_path: /assets/images/intro-to-python-poster.png
+    alt: "intro-to-python"
+    title: "Introduction to Python Basics"
+    excerpt: "Programming for AI Series ရဲ့ ပထမ လ အနေနဲ့ Python ကို လုံးဝ မသိသေးတဲ့ မြန်မာ လူငယ်များကို ဦးစားပေးထားတဲ့ Introduction to Python Basics ဖြစ်ပါတယ်။ ဒီမှာတော့ Python နဲ့ ပတ်သက်တဲ့ အခြေခံလေးတွေကို အဓိက သင်ကြားပေးသွားမှာ ဖြစ်ပါတယ်။ ဒီ course မှာ Coding Exercise, Assignments and Mini Project ပါပါတယ်။"
+    url: "/courses/intro-to-python/"
+    btn_label: "ပိုမိုလေ့လာမယ်။"
+  - image_path: /assets/images/opencv-with-python.png
+    alt: "opencv-with-python"
+    title: "OpenCV with Python"
+    excerpt: "OpenCV ဆိုတာ Computer Vision ဆိုင်ရာနည်းပညာများကိုလေ့လာဖို့ အလွယ်တကူယူသုံးနိုင်တဲ့ function တွေကို စုထားတဲ့ open-source library တစ်ခုဖြစ်ပါတယ်။ ဒီ course မှာ Python ကို သုံးပြီး assignment, mini-project တွေနဲ့ တကွ အတူတူ လေ့လာကြမယ်။"
+    url: "/courses/opencv-with-python/"
+    btn_label: "ပိုမိုလေ့လာမယ်။"
 intro:
-  - excerpt: 'Follow for updates on the school &nbsp; [<i class="fab fa-twitter"></i> @alexsnowschool](https://twitter.com/alexsnowschool){: .btn .btn--twitter}'
+  - excerpt: 'အတူတူလေ့လာသူတွေနဲ့ &nbsp; [<i class="fab fa-facebook"></i> Alex Snow School](https://www.facebook.com/groups/alexsnowschool){: .btn .btn--facebook target="_blank"} မှာတွေ့ကြမယ်။'
 ---
 
 {% include feature_row id="intro" type="center" %}
