added 3 dummy course link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ header:
   overlay_image: /assets/images/HeroImage.png
   overlay_filter: .3
   cta_label: "စကြရအောင်။  <i class='fas fa-chevron-circle-right'></i>"
-  cta_url: "https://alexsnowschool.github.io/resources/"
+  cta_url: "https://alexsnowschool.github.io/courses/"
   caption:
 excerpt: 'တစ်ရက်နည်းနည်းစီ တဖြည်းဖြည်း အတူတူလေ့လာကြစို့။'
 feature_row:
