removed tutorial pages and added gisus for comment

--- a/_pages/courses.html
+++ b/_pages/courses.html
@@ -2,7 +2,7 @@
 layout: course-directory
 title: Courses
 permalink: /courses/
-excerpt: 'Find, reuse, and remix educational courses created and collected by the Alex Snow School.'
+excerpt: 'မိမိတို့ စိတ်ဝင်စားမှု ရှိတဲ့ နည်ပယ်ကို ရွေးချယ်လေ့လာနိုင်ကြပါပြီး။'
 header:
   teaser: /assets/images/18659u.jpg
   overlay_image: /assets/images/HeroImage.png
