--- a/_pages/courses.html
+++ b/_pages/courses.html
@@ -2,7 +2,7 @@
 layout: course-directory
 title: Courses
 permalink: /courses/
-excerpt: 'မိမိတို့ စိတ်ဝင်စားမှု ရှိတဲ့ နည်ပယ်ကို ရွေးချယ်လေ့လာနိုင်ကြပါပြီး။'
+excerpt: 'မိမိတို့ စိတ်ဝင်စားမှု ရှိတဲ့ နယ်ပယ်ကို ရွေးချယ်လေ့လာနိုင်ကြပါပြီ။'
 header:
   teaser: /assets/images/18659u.jpg
   overlay_image: /assets/images/HeroImage.png
