added portfolio page

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,7 +8,7 @@ header:
   cta_label: "Portfolio <i class='fas'></i>"
   cta_url: ""
   caption: 
-excerpt: 
+excerpt: 'ကျောင်းသား၊ ကျောင်းသူများ အတူတူစုပြီး လုပ်ထားကြတဲ့ projects တွေပါ။' 
 feature_row:
   - image_path: /assets/images/learning-journey.png
     alt: "blog"
