--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,19 +8,19 @@ header:
   cta_label: "Portfolio <i class='fas'></i>"
   cta_url: ""
   caption: 
-excerpt: 'ကျောင်းသား၊ ကျောင်းသူများ အတူတူစုပြီး လုပ်ထားကြတဲ့ projects တွေပါ။' 
+excerpt: 'လုပ်ဖြစ်ထားတဲ့ projects ဖြစ်ပါတယ်။' 
 feature_row:
+  - image_path: /assets/images/gpt-3-burmese.png
+    alt: "intro-to-python"
+    title: "GPT-3 Burmese Playground"
+    excerpt: "GPT-3 အသုံပြုပြီး ရေးထားဖြစ်တဲ့ burmese AI writer app လေ ဖြစ်ပါတယ်။"
+    url: "https://burmese-gpt3-playground-alexsnowschool.vercel.app/"
+    btn_label: "ပိုမိုလေ့လာမယ်။"
   - image_path: /assets/images/learning-journey.png
     alt: "blog"
     title: "Blog"
     excerpt: "ကျောင်းနှင့်ဆိုင်သော topics များကို ဦးစားပေး ရေးထားသော blog တစ်ခုဖြစ်သည်။"
     url: "https://alexsnow348.github.io/"
-    btn_label: "ပိုမိုလေ့လာမယ်။"
-  - image_path: /assets/images/gpt-3-burmese.png
-    alt: "intro-to-python"
-    title: "GPT-3 Burmese Playground"
-    excerpt: "GPT-3 နှင့် Google Traslate ကို အသုံးချပြီး Next.js ဖြစ်ရေးထားတော့ burmese AI writer app လေ ဖြစ်ပါတယ်။"
-    url: "https://burmese-gpt3-playground-alexsnowschool.vercel.app/"
     btn_label: "ပိုမိုလေ့လာမယ်။"
 
 intro:
