updated home page

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@ excerpt: 'တစ်ရက်နည်းနည်းစီ တဖြည်းဖ
 feature_row:
   - image_path: /assets/images/intro-to-ml-poster.png
     alt: "intro-to-ml"
-    title: "Introduction to Machine Learning"
-    excerpt: "AI ကို စတင်ခြေလှမ်းဖို့အတွက် Deep Learning မလေ့လာခင် Machine Learning ရဲ့ basics တွေ ဖြစ်တဲ့ ML Algorithms ၊ ကိုယ် train ချင်တဲ့ Datasets အကြောင်း၊ Accuracy နဲ့ Loss ဆိုတာတွေ အစရှိတဲ့ Theory and Basics တွေအကြောင်းသင်ကြားပေးမှာဖြစ်ပါတယ်။"
+    title: "Intro to Machine Learning"
+    excerpt: "AI ကို စတင်ခြေလှမ်းဖို့အတွက် Deep Learning မလေ့လာခင် Machine Learning ရဲ့ basics တွေ ဖြစ်တဲ့ ML Algorithms ၊ train ချင်တဲ့ Datasets အကြောင်း၊ Accuracy နဲ့ Loss စတာတွေအကြောင်းသင်ကြားပေးမှာဖြစ်ပါတယ်။"
     url: "/courses/intro-to-ml/"
-    btn_label: "ပိုမိုလေ့လာမယ်။"
+    btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>"
   - image_path: /assets/images/intro-to-python-poster.png
     alt: "intro-to-python"
     title: "Introduction to Python Basics"
-    excerpt: "Programming for AI Series ရဲ့ ပထမ လ အနေနဲ့ Python ကို လုံးဝ မသိသေးတဲ့ မြန်မာ လူငယ်များကို ဦးစားပေးထားတဲ့ Introduction to Python Basics ဖြစ်ပါတယ်။ ဒီမှာတော့ Python နဲ့ ပတ်သက်တဲ့ အခြေခံလေးတွေကို အဓိက သင်ကြားပေးသွားမှာ ဖြစ်ပါတယ်။ ဒီ course မှာ Coding Exercise, Assignments and Mini Project ပါပါတယ်။"
+    excerpt: "Programming for AI Series ရဲ့ ပထမ လ အနေနဲ့ Python ကို လုံးဝ မသိသေးတဲ့ မြန်မာ လူငယ်များကို ဦးစားပေးထားတဲ့ Introduction to Python Basics ဖြစ်ပါတယ်။ ဒီမှာတော့ Python နဲ့ ပတ်သက်တဲ့ အခြေခံလေးတွေကို အဓိက သင်ကြားပေးသွားမှာ ဖြစ်ပါတယ်။"
     url: "/courses/intro-to-python/"
-    btn_label: "ပိုမိုလေ့လာမယ်။"
+    btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>"
   - image_path: /assets/images/opencv-with-python.png
     alt: "opencv-with-python"
     title: "OpenCV with Python"
     excerpt: "OpenCV ဆိုတာ Computer Vision ဆိုင်ရာနည်းပညာများကိုလေ့လာဖို့ အလွယ်တကူယူသုံးနိုင်တဲ့ function တွေကို စုထားတဲ့ open-source library တစ်ခုဖြစ်ပါတယ်။ ဒီ course မှာ Python ကို သုံးပြီး assignment, mini-project တွေနဲ့ တကွ အတူတူ လေ့လာကြမယ်။"
     url: "/courses/opencv-with-python/"
-    btn_label: "ပိုမိုလေ့လာမယ်။"
+    btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
 intro:
   - excerpt: 'အတူတူလေ့လာသူတွေနဲ့ &nbsp; [<i class="fab fa-facebook"></i> Alex Snow School](https://www.facebook.com/groups/alexsnowschool){: .btn .btn--facebook target="_blank"} မှာတွေ့ကြမယ်။'
 ---
