added course basic roadmap

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -3,25 +3,24 @@ layout: splash
 permalink: /portfolio/
 date:
 header:
+  teaser: /assets/images/18659u.jpg
   overlay_image: /assets/images/HeroImage.png
   overlay_filter: .3
-  cta_label: "Portfolio <i class='fas'></i>"
-  cta_url: ""
   caption: 
 excerpt: 'လုပ်ဖြစ်ထားတဲ့ projects ဖြစ်ပါတယ်။' 
 feature_row:
   - image_path: /assets/images/gpt-3-burmese.png
     alt: "intro-to-python"
-    title: "GPT-3 Burmese Playground"
+    title: ""
     excerpt: "GPT-3 အသုံပြုပြီး ရေးထားဖြစ်တဲ့ burmese AI writer app လေ ဖြစ်ပါတယ်။"
     url: "https://burmese-gpt3-playground-alexsnowschool.vercel.app/"
-    btn_label: "ပိုမိုလေ့လာမယ်။"
+    btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
   - image_path: /assets/images/learning-journey.png
     alt: "blog"
-    title: "Blog"
+    title: ""
     excerpt: "ကျောင်းနှင့်ဆိုင်သော topics များကို ဦးစားပေး ရေးထားသော blog တစ်ခုဖြစ်သည်။"
     url: "https://alexsnow348.github.io/"
-    btn_label: "ပိုမိုလေ့လာမယ်။"
+    btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
 
 intro:
   - excerpt: 'အတူတူလေ့လာသူတွေနဲ့ &nbsp; [<i class="fab fa-twitter"></i>@alexsnowschool](https://twitter.com/alexsnowschool){: .btn .btn--twitter target="_blank"} မှာတွေ့ကြမယ်။'
