updated portfolio describtion

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -18,7 +18,8 @@ feature_row:
   - image_path: /assets/images/learning-journey.png
     alt: "blog"
     title: ""
-    excerpt: "ကျောင်းနှင့်ဆိုင်သော topics များကို ဦးစားပေး ရေးထားသော blog တစ်ခုဖြစ်သည်။"
+    excerpt: "<strong>ဘဝတစ််လျှောက် လေ့လာမိသမျှ၊ လုပ်မိသမျှ၊ တွေးမိသမျှတွေကို နောက်ပိုင်း အသက်ကြီးတဲ့အချိန် ရောက်လာတဲ့အခါ ပြန်လည်ဖတ်ပြီး ပြုံးပျော်နိုင်ဖို့ မှတ်တမ်းတင်ထားတာတွေ စုထားတဲ့ နေရာ‌လေး ဖြစ်ပါတယ်။</strong>
+    "
     url: "https://alexsnow348.github.io/"
     btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
 
