updated for new portfolio

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -22,6 +22,12 @@ feature_row:
     "
     url: "https://alexsnow348.github.io/"
     btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
+  - image_path: /assets/images/exchain-rate-prediction.png
+    alt: "exchain-rate-prediction"
+    title: ""
+    excerpt: "<strong>မလေးရှား ငွေစျေး လှဲလှည်နှုန်းကို Neural Networks techniques တွေဖြစ်တဲ့ MLP, RNN, RBF စတာတွေကို R ဖြင့် တည်ဆောက်ထားတာဖြစ်ပါတယ်။</strong>"
+    url: "https://wuthmone.shinyapps.io/ann_predictor_app/"
+    btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
 
 intro:
   - excerpt: 'အတူတူလေ့လာသူတွေနဲ့ &nbsp; [<i class="fab fa-twitter"></i>@alexsnowschool](https://twitter.com/alexsnowschool){: .btn .btn--twitter target="_blank"} မှာတွေ့ကြမယ်။'
