updated the invite link for school slack invite

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -18,20 +18,20 @@ feature_row:
   - image_path: /assets/images/learning-journey.png
     alt: "blog"
     title: ""
-    excerpt: "<strong>ဘဝတစ််လျှောက် လေ့လာမိသမျှ၊ လုပ်မိသမျှ၊ တွေးမိသမျှတွေကို နောက်ပိုင်း အသက်ကြီးတဲ့အချိန် ရောက်လာတဲ့အခါ ပြန်လည်ဖတ်ပြီး ပြုံးပျော်နိုင်ဖို့ မှတ်တမ်းတင်ထားတာတွေ စုထားတဲ့ နေရာ‌လေး ဖြစ်ပါတယ်။</strong>
+    excerpt: "ဘဝတစ််လျှောက် လေ့လာမိသမျှ၊ လုပ်မိသမျှ၊ တွေးမိသမျှတွေကို နောက်ပိုင်း အသက်ကြီးတဲ့အချိန် ရောက်လာတဲ့အခါ ပြန်လည်ဖတ်ပြီး ပြုံးပျော်နိုင်ဖို့ မှတ်တမ်းတင်ထားတာတွေ စုထားတဲ့ နေရာ‌လေး ဖြစ်ပါတယ်။
     "
     url: "https://alexsnow348.github.io/"
     btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
   - image_path: /assets/images/facenet-finetuned-predictor.png
     alt: "facenet-finetuned-predictor"
     title: ""
-    excerpt: "<strong>FaceNet Architecture ကို အခြေခံထားပြီး fine-tuned လုပ်ထားတဲ့ Face Recognition ပရောဂျက်တစ်ခုဖြစ်ပါတယ်။</strong>"
+    excerpt: "FaceNet Architecture ကို အခြေခံထားပြီး fine-tuned လုပ်ထားတဲ့ Face Recognition ပရောဂျက်တစ်ခုဖြစ်ပါတယ်။"
     url: "https://github.com/alexsnow348/facetag"
     btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
   - image_path: /assets/images/exchain-rate-prediction.png
     alt: "exchain-rate-prediction"
     title: ""
-    excerpt: "<strong>မလေးရှား ငွေစျေး လှဲလှည်နှုန်းကို Neural Networks techniques တွေဖြစ်တဲ့ MLP, RNN, RBF စတာတွေကို R ဖြင့် တည်ဆောက်ထားတာဖြစ်ပါတယ်။</strong>"
+    excerpt: "မလေးရှား ငွေစျေး လှဲလှည်နှုန်းကို Neural Networks techniques တွေဖြစ်တဲ့ MLP, RNN, RBF စတာတွေကို R ဖြင့် တည်ဆောက်ထားတာဖြစ်ပါတယ်။"
     url: "https://wuthmone.shinyapps.io/ann_predictor_app/"
     btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
 
