--- a/_pages/roadmap.html
+++ b/_pages/roadmap.html
@@ -29,7 +29,7 @@ feature_row:
     btn_label: "<i class='fas fa-chevron-circle-right'>  အသေးစိတ်ကြည့်မယ်။</i>" 
 
 intro:
-  - excerpt: 'အတူတူလေ့လာသူတွေနဲ့ &nbsp; [<i class="fab fa-twitter"></i>@alexsnowschool](https://twitter.com/alexsnowschool){: .btn .btn--twitter target="_blank"} မှာတွေ့ကြမယ်။'
+  - excerpt: 'အတူတူလေ့လာသူတွေနဲ့ &nbsp; [<i class="fab fa-slack"></i> Alex Snow School](https://join.slack.com/t/alex-snow-school/shared_invite/zt-2g9eqlxtf-_hS6wPIhqiZhWV7KKdEJVA){: .btn .btn--slack target="_blank"} မှာတွေ့ကြမယ်။'
 ---
 
 {% include feature_row id="intro" type="center" %}
