--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ feature_row:
     url: "/courses/opencv-with-python/"
     btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
 intro:
-  - excerpt: 'အတူတူလေ့လာသူတွေနဲ့ &nbsp; [<i class="fab fa-facebook"></i> Alex Snow School](https://www.facebook.com/groups/alexsnowschool){: .btn .btn--facebook target="_blank"} မှာတွေ့ကြမယ်။'
+  - excerpt: 'အတူတူလေ့လာသူတွေနဲ့ &nbsp; [<i class="fab fa-slack"></i> Alex Snow School](https://join.slack.com/t/alex-snow-school/shared_invite/zt-2g9eqlxtf-_hS6wPIhqiZhWV7KKdEJVA){: .btn .btn--slack target="_blank"} မှာတွေ့ကြမယ်။'
 ---
 
 {% include feature_row id="intro" type="center" %}
