updated the portfolio

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -12,8 +12,8 @@ feature_row:
   - image_path: /assets/images/gpt-3-burmese.png
     alt: "intro-to-python"
     title: ""
-    excerpt: "GPT-3 အသုံပြုပြီး ရေးထားဖြစ်တဲ့ burmese AI writer app လေ ဖြစ်ပါတယ်။"
-    url: "https://burmese-gpt3-playground-alexsnowschool.vercel.app/"
+    excerpt: "စိတ်ထဲမှာ ပေါ်လာတဲ့ ကိုယ် crush လေရဲ့ personality တွေ ပြောပြပြီး flirt လုပ်လို ကောင်းမယ့် ရည်စားစာတိုလေးတွေ ရေးခိုင်မယ်။"
+    url: "https://lovely-yours.vercel.app/"
     btn_label: "<i class='fas fa-chevron-circle-right'>  ပိုမိုလေ့လာမယ်။</i>" 
   - image_path: /assets/images/learning-journey.png
     alt: "blog"
