updated for prototyping

--- a/_pages/prototyping.html
+++ b/_pages/prototyping.html
@@ -1,13 +1,13 @@
 ---
 layout: splash
-permalink: /portfolio/
+permalink: /prototyping/
 date:
 header:
   teaser: /assets/images/18659u.jpg
   overlay_image: /assets/images/HeroImage.png
   overlay_filter: .3
   caption: 
-excerpt: 'လုပ်ဖြစ်ထားတဲ့ projects ဖြစ်ပါတယ်။' 
+excerpt: 'Prototype အနေဖြင့် လုပ်ထားဖြစ်သော projects များကို စုစည်းထားတာ ဖြစ်ပါတယ်။' 
 feature_row:
   - image_path: /assets/images/gpt-3-burmese.png
     alt: "intro-to-python"
